<resources>
    <string name="app_name">FoodMatch</string>
    <string name="food_title">Food title goes here</string>
    <string name="image_description">Current image of the food</string>
    <string name="food_categories_name">Food Categories:</string>
    <string name="infoButton">Info</string>
    <string name="venues_categories">Venues:</string>
    <string name="areas">Areas</string>
    <string name="areas_description">Included areas</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="food_description">The food description goes here</string>
    <string name="food_price">Price:</string>
    <string name="actual_price">$$.$$$</string>
    <string name="title_activity_settings">Settings</string>
    <string name="clear_everything">Clear list</string>
    <string name="title_activity_liked_product">Liked Product</string>
    <string name="order_button_name">Order</string>
    <string name="view_similar">View similar</string>
    <string name="save_for_later">Save for later</string>
    <string name="test">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."</string>
    <string name="empty_stack">There are no more items to be shown.</string>
    <string name="default_food_category">FISH</string>
    <string name="title_activity_saved_products">Saved Items</string>
    <string name="TitleText">Title</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="priceText">Price:</string>
    <string name="Total_Price">Total Price:</string>
    <string name="Name">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone</string>
    <string name="View_on_map">View On Map</string>
    <string name="category">Category:</string>
    <string name="title_activity_maps">Map</string>
    <string name="personalDetailsLabel">Personal Details</string>
    <string name="placeOrder">Place Order</string>
</resources>
