<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.botevplovdiv.foodmatch.InfoActivity"
    tools:showIn="@layout/activity_info">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fab_margin"
        android:isScrollContainer="true"
        android:orientation="vertical"
        app:cardCornerRadius="7dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/vintagepattern">

            <ImageView
                android:id="@+id/foodImageInfoActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/infoFoodTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/foodImageInfoActivity"
                android:layout_marginEnd="@dimen/Spacing"
                android:layout_marginStart="@dimen/Spacing"
                android:layout_marginTop="@dimen/Spacing"
                android:padding="@dimen/Spacing"
                android:textSize="@dimen/Price_tag_size" />

            <TextView
                android:id="@+id/infoFoodCategoryTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoFoodTitle"
                android:layout_marginBottom="@dimen/Spacing"
                android:layout_marginStart="@dimen/Spacing"
                android:paddingEnd="@dimen/Spacing"
                android:paddingStart="@dimen/Spacing"
                android:text="@string/category" />

            <TextView
                android:id="@+id/infoFoodCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoFoodTitle"
                android:layout_marginBottom="@dimen/Spacing"
                android:layout_marginStart="@dimen/Spacing"
                android:layout_toEndOf="@+id/infoFoodCategoryTag"
                android:paddingEnd="@dimen/Spacing"
                android:paddingStart="@dimen/Spacing" />

            <ImageView
                android:id="@+id/infoFirstDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoFoodCategory"
                app:srcCompat="@drawable/flatdivider2" />

            <ScrollView
                android:id="@+id/dscrScroller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/combinedLayout"
                android:layout_below="@+id/infoFoodCategory"
                android:layout_marginBottom="@dimen/Spacing"
                android:layout_marginTop="@dimen/Spacing"
                android:paddingBottom="@dimen/price_tag_padding"
                android:paddingTop="@dimen/price_tag_padding">

                <TextView
                    android:id="@+id/infoFoodDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/Spacing"
                    android:padding="@dimen/Spacing" />


            </ScrollView>

            <LinearLayout
                android:id="@+id/combinedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/priceLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/halfshapeleft"
                    android:elevation="0dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/Spacing">

                    <TextView
                        android:id="@+id/infoPriceTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Spacing"
                        android:padding="@dimen/Spacing"
                        android:text="@string/priceText"
                        android:textSize="@dimen/Medium_Text" />

                    <TextView
                        android:id="@+id/infoItemPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/Spacing"
                        android:padding="@dimen/Spacing"
                        android:textSize="@dimen/Medium_Text" />
                </LinearLayout>

                <Button
                    android:id="@+id/infoOrderButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/halfovalshaperight"
                    android:text="@string/order_button_name" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
